fixed ``quote marks''

--- a/doc/src/manual/ch-example-nim.tex
+++ b/doc/src/manual/ch-example-nim.tex
@@ -28,8 +28,8 @@ Describing the model consists of two phases:
 \section{Topology}
 
 The game can be modelled in {\opp} as a network with three modules:
-the ''game'' (a manager module) and two players.
-The modules will communicate by exchanging messages. The ''game''
+the ``game'' (a manager module) and two players.
+The modules will communicate by exchanging messages. The ``game''
 module keeps the current number of tokens and organizes the game;
 in each turn, the player modules receives the number of tokens
 from the Game module and sends back its move.
