--- a/doc/src/manual/ch-run-sim.tex
+++ b/doc/src/manual/ch-run-sim.tex
@@ -216,7 +216,7 @@ include per-run-pars.ini
 The most important options of the \texttt{[General]} section are the
 following.
 \begin{itemize}
-  \item{The \fpar{ini-warnings} option can be used for ''debugging'' ini
+  \item{The \fpar{ini-warnings} option can be used for ``debugging'' ini
     files: if enabled, it lists which options were searched for but
     not found.}
   \item{The \fpar{network} option selects the model to be set up and run.}
@@ -672,7 +672,7 @@ its parts written in Tcl script.
 The default path from where the icons are loaded can be changed with
 the \fvar{OMNETPP\_BITMAP\_PATH} variable, which is a
 semicolon-separated list of directories and defaults to
-''\textit{omnetpp-dir}/bitmaps;.;./bitmaps''.
+``\textit{omnetpp-dir}/bitmaps;.;./bitmaps''.
 \end{sloppypar}
 
 \tbf{Embedding Tcl code into the executable}
@@ -873,7 +873,7 @@ except all end-to-end delays and the ones in any module called Router2.
 Display strings\index{display strings} control the modules' graphical
 appearance in the Tkenv user interface. Display strings can be
 assigned to modules, submodules and gates (a connection's display
-string is stored in its ''from'' gate). Display strings can be
+string is stored in its ``from'' gate). Display strings can be
 hardcoded into the NED file or specified in the configuration file.
 (Hardcoded display strings take precedence over the ones given in ini
 files.) Format of display string are documented in the Display String
@@ -1040,7 +1040,7 @@ include parameters.ini
 and then generate parameters.ini by program for each run.
 
 
-Here's the ''runall'' script of Joel Sherrill's \textit{File
+Here's the ``runall'' script of Joel Sherrill's \textit{File
 System Simulator} as an example:
 
 \begin{verbatim}
