--- a/doc/usman/ch-overview.tex
+++ b/doc/usman/ch-overview.tex
@@ -166,7 +166,7 @@ of the last bit (Fig. \ref{fig:ch-overview:message-transm}).
 The above model is not applicable for modeling some protocols like
 Token Ring and FDDI where the stations repeat the bits of a frame that
 arrives on the ring immediately, without waiting for the whole frame
-to arrive; in other words, frames ''flow through'' the stations, being
+to arrive; in other words, frames ``flow through'' the stations, being
 delayed only a few bits. If you want to model such networks, the data
 rate modeling feature of {\opp} cannot be used.
 
