--- a/doc/usman/ch-parallel-exec.tex
+++ b/doc/usman/ch-parallel-exec.tex
@@ -215,7 +215,7 @@ You must let {\opp} know if you want to use MPI\index{MPI} or
 PVM\index{PVM}. This can be configured in the \texttt{[General]}
 section of the ini file, via te
 \fpar[parallel-system]{parallel-system=} entry. Its value can be
-''PVM'' or ''MPI''; it defaults to ''MPI''.
+``PVM'' or ``MPI''; it defaults to ``MPI''.
 
 \begin{Verbatim}[commandchars=\\\{\}]
 ; file: omnetpp.ini
@@ -331,7 +331,7 @@ To set up a simulation for distributed execution, the user must:
   hosts too and do the simulation.}
 \end{enumerate}
 
-The first machine is called ''console'' or ``master'', the
+The first machine is called ``console'' or ``master'', the
 others are called ``slaves''.
 
 
